Convert images to WebP for faster loading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,14 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "noImplicitAny": false
   },
-  "include": ["/*.ts", "/*.tsx"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
