--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tonechka",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://han-zamay.github.io/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
-    "@types/react-modal": "^3.16.3"
+    "@types/react-modal": "^3.16.3",
+    "gh-pages": "^6.3.0"
   }
 }
